--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.json"
+    "check:tsc": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.json",
+    "check:tsgo": "tsgo --noEmit",
+    "check": "bun run check:tsgo"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@typescript/native-preview": "^7.0.0-dev.20251216.1",
+    "lightningcss": "^1.30.2",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "typescript": "~5.9.3",
