--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,16 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
     "@typescript/native-preview": "^7.0.0-dev.20251216.1",
+    "autoprefixer": "^10.4.23",
     "lightningcss": "^1.30.2",
+    "postcss": "^8.5.6",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.5"
   },
